.happypack/s-1065237868
SyntaxError: Unexpected token, expected , (55:4)

[0m [90m 53 | [39m          ]
 [90m 54 | [39m      }
[31m[1m>[22m[39m[90m 55 | [39m    )}
 [90m    | [39m    [31m[1m^[22m[39m
 [90m 56 | [39m
 [90m 57 | [39m  }
 [90m 58 | [39m[0m

BabelLoaderError: SyntaxError: Unexpected token, expected , (55:4)

[0m [90m 53 | [39m          ]
 [90m 54 | [39m      }
[31m[1m>[22m[39m[90m 55 | [39m    )}
 [90m    | [39m    [31m[1m^[22m[39m
 [90m 56 | [39m
 [90m 57 | [39m  }
 [90m 58 | [39m[0m

    at transpile (/home/leo/htdocs/biodiversity_catalogue_v2_frontend/node_modules/babel-loader/lib/index.js:63:13)
    at Object.module.exports (/home/leo/htdocs/biodiversity_catalogue_v2_frontend/node_modules/babel-loader/lib/index.js:163:20)
    at applySyncOrAsync (/home/leo/htdocs/biodiversity_catalogue_v2_frontend/node_modules/happypack/lib/applyLoaders.js:341:21)
    at apply (/home/leo/htdocs/biodiversity_catalogue_v2_frontend/node_modules/happypack/lib/applyLoaders.js:268:5)
    at /home/leo/htdocs/biodiversity_catalogue_v2_frontend/node_modules/happypack/lib/applyLoaders.js:131:7
    at applyPitchLoader (/home/leo/htdocs/biodiversity_catalogue_v2_frontend/node_modules/happypack/lib/applyLoaders.js:184:14)
    at applyPitchLoader (/home/leo/htdocs/biodiversity_catalogue_v2_frontend/node_modules/happypack/lib/applyLoaders.js:192:14)
    at applyPitchLoaders (/home/leo/htdocs/biodiversity_catalogue_v2_frontend/node_modules/happypack/lib/applyLoaders.js:222:4)
    at applyLoaders (/home/leo/htdocs/biodiversity_catalogue_v2_frontend/node_modules/happypack/lib/applyLoaders.js:116:3)
    at HappyWorker.compile (/home/leo/htdocs/biodiversity_catalogue_v2_frontend/node_modules/happypack/lib/HappyWorker.js:32:3)